--- a/MetalLiqViajes_Forms/MetalLiqViajes_Forms/fTerpelDMS.resx
+++ b/MetalLiqViajes_Forms/MetalLiqViajes_Forms/fTerpelDMS.resx
@@ -159,8 +159,41 @@
   <metadata name="toolTip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>133, 17</value>
   </metadata>
+  <data name="btnUpdate.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABIAAAASCAYAAABWzo5XAAAABGdBTUEAALGPC/xhBQAAABl0RVh0U29m
+        dHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAAHQSURBVDhPrdTNaxNBHMZx/wNB1EtJPefoH2AK3gIS
+        SYxVhF7EXqrRkoOCUqRYEVRCuka3lOBKfWkVtVXTQutbFqmelLaoWTeh9mAMSNM22V6SVb7dSUc8bElD
+        6gM/Zmfm4XPb2aZp2nZnnjpDk5N2pkVAWjabpdnk83mBTQnIqlar8ri5OAYCktv6WS2WeHA2wUT/MN9n
+        vsnT9TQMlX4tcaOjB/3aY8Z77tB//CK5j1/lbYNQsbjMhWgfEwNjrLydZ/mFwcOIwvDlQdloAFpcXOJM
+        tJdbgyPMfs5hThvkht4z1q3SdyQqW5tAlrVK4uYA9+8meD7+jEejLxl5Mol6TiHa1sEPc0E260CWZZFM
+        JvnwJob98xRz+gni8Suc7O7lWLCThS852VzPhlC5XEZVVaZfXa8hdnY/ldndxC8dIBTuxDTnZfNfXJBA
+        FEXh3dRV7HwXttlGZWYX+tAe2tuPboiIuKBYLIb++h6/C+exjX1UPu0krbVyOBzCMAzZcscFRSKR2vqn
+        NEl1bi/p262EDwXrIiIuyO/3k0qlat/66GlCwYObIiIuyOPx4PV68fl8BAIBMpmMvKmfv9B/+2m39IwU
+        CgUBpQW0w5ktPmxayxrHBFuPaMitbQAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="btnConsultar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGOfPtRkwAAACBjSFJNAAB6
+        JQAAgIMAAPn/AACA6QAAdTAAAOpgAAA6mAAAF2+SX8VGAAAACXBIWXMAAAsTAAALEwEAmpwYAAACLklE
+        QVQ4T82TX0hTURzHV2B/QCGksIegArEMCveQMmbYQ1gucoTZZD2MGvjiHqa0ae1218Pc5W5Luy4NiuaY
+        FZWWNlg2UUQcFcZABkUFtlxlw4VOKmva+nbONZfKHoReevie8/t9z+/3OYcfHAmAf9KyxNY+FK7lvZOF
+        lU1jK/zBdD7VskSudnbOfE0gU2qIbJExa6lH96X+0nqqVEBvOS/0QllzAwVKO/YorDHqC7cCSOcvKhWY
+        2/rwIzGPh8NvYRCGsfNQIzbsM65Z9L2BMDjPKHJLraR8BaCh2ZdtbvVDy3ahrPo69iodkKuvoLCq7Y3W
+        dAd63gtVXQd2KzgCtkB74V52CkCensG0+DEZ/474bBKBF3FozD7kHeGwab9pxHjJS+qAL7PzGApN4aTx
+        PnIPc9RKAUx1fA818DT0CXbPcxzT3UZOMQvS3EABodcTCL76DN49gkpjF7bKGZx1+FgRYHcNTOsae1Be
+        0w5phYD8Mg55pRbkyBj6grCee7BwdoKcHbVh2wEGm4vqUaS6nBAB1msDSCZ/YTz6DY+ffYDFFcSOgxT+
+        d1Bn2E58jM4gHImhe3AMOr4f+YqFYUpMwiPMzf0kze/h6AhCc9H/nwFI80YKiExMo+/JOzjvjqLC0I1d
+        ZFYi4PQ590t1/U2UaFohq2qGTNWE7SVslEAy/wDWEcUU1VfHy3UuFJ9qgfS4DVkFtVMigC6rkdPTK/4N
+        smeo9O71RFk0T1u8ekHyG2jrt2s5yYVVAAAAAElFTkSuQmCC
+</value>
+  </data>
   <metadata name="statusStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
+  </metadata>
+  <metadata name="conductor.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
   </metadata>
   <metadata name="documentosBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>230, 17</value>
